--- a/index.html
+++ b/index.html
@@ -1,8 +1,21 @@
-<div id="octocat">
-    <img src="https://octodex.github.com/images/NUX_Octodex.gif" alt="Octocat Image">
-</div>div>
+<!DOCTYPE html>
 
-<p>
-    Ready to team up? Let's collaborate, @octocat!
-</p>
-</p>
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <title>Spoon-Knife</title>
+  <LINK href="styles.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+
+<div id="octocat">
+     <img src="https://octodex.github.com/images/NUX_Octodex.gif" alt="Octocat Image">
+</div>
+
+    <p>
+         Ready to team up? Let's collaborate, @octocat!
+    </p>
+
+</body>
+</html>
