--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 
 <div id="octocat">
      <img src="https://octodex.github.com/images/NUX_Octodex.gif" alt="Octocat Image">
-</div>div>
+</div>
 
     <p>
          Ready to team up? Let's collaborate, @octocat!
     </p>
-    </p>
-
+  
 </body>
 </html>
